--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "start": "node build/server.cjs",
     "dev": "tsx watch src/server.ts",
-    "build": "tsup src/server.ts --out-dir build"
+    "build": "tsup src/server.ts --out-dir build",
+    "test": "vitest run --project unit",
+    "test:watch": "vitest --project unit",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -15,17 +19,22 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "25.2.3",
+    "@vitest/coverage-v8": "4.0.18",
+    "@vitest/ui": "4.0.18",
     "eslint": "8.57.1",
     "prisma": "7.4.0",
     "tsup": "8.5.1",
     "tsx": "4.21.0",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vite-tsconfig-paths": "6.1.1",
+    "vitest": "4.0.18"
   },
   "dependencies": {
     "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "10.0.0",
     "@prisma/adapter-pg": "7.4.0",
     "@prisma/client": "7.4.0",
+    "bcryptjs": "3.0.3",
     "dotenv": "17.3.1",
     "fastify": "5.7.4",
     "pg": "8.18.0",
